<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/instruction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:autofillHints="name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/card_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:autofillHints="creditCardNumber"
        android:inputType="number"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/submit_button"
        android:background="@color/purple_200"
        android:gravity="center"/>

    <TextView
        android:id="@+id/guess_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_number"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="24dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"/>

    <Button
        android:id="@+id/guess_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_button"
        android:background="@color/purple_200"
        android:gravity="center"/>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp"
        android:gravity="center"/>

</LinearLayout>
